# napari-padbound

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please.config.json
.github/: dependabot.yml
.github/workflows/: release-please.yml
.napari-hub/: DESCRIPTION.md
src/napari_padbound/: __init__.py  _version.py  control_mapper.py  label_controller.py  label_feedback.py  napari.yaml  slice_controller.py  viewer_controller.py  widget.py
src/napari_padbound/_tests/: test_widget.py
